# Floorplan-Alignment

./: .gitignore  README.md  run_slam.sh
floorplan_alignment_interfaces/: CMakeLists.txt  package.xml
floorplan_alignment_interfaces/msg/: LineWithDescriptor.msg  LinesInFrame.msg
floorplans/dxf_files/: floor_1.dxf
floorplans_csv_files/: floor_1.csv
intrinsics/: kalibr_imucam_chain.yaml
line_extractor/: CMakeLists.txt  package.xml
line_extractor/src/: line_extractor.cpp
reconstruct_3d/: CMakeLists.txt  package.xml
reconstruct_3d/include/reconstruct_3d/: reconstruct_3d.hpp
reconstruct_3d/src/: main.cpp  reconstruct_3d.cpp
src/: floorplan_edge_extractor.py  reconstruct_3d.py  rototranslation_test.py  vizualize_results.py  vizualize_results_edge_alignment.py  vizualize_results_global_alignment.py  vizualize_results_numpy-1-26-4.py
trajectory_recorder/: CMakeLists.txt  package.xml
trajectory_recorder/ground_truth/: floor_1_2025-05-05_run_1.txt
trajectory_recorder/src/: image_subscriber.py  save_tf.py  trajectory_recorder.cpp
trajectory_recorder/trajectories/: test_trajectory.csv  trajectory_marius.csv
trajectory_recorder/trajectories/orientations/: orientation.json
